<resources>
    <string name="app_name">APP-test Challenge</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="acepte_terms">Aceita os Termos</string>
    <string name="next">Próximo</string>
    <string name="acceptTerms">Aceitar os Termos</string>
    <string name="aage">Idade</string>
    <string name="address">Endereço</string>
    <string name="password">Senha</string>
</resources>